# Python-AI_Agent

./: call_functions.py  main.py  ollama_main.py  pyproject.toml  tests.py
calculator/: main.py  tests.py
calculator/pkg/: new_created_file.txt
functions/: get_file_content.py  get_files_info.py  run_python_file.py  write_file.py
