[project]
name = "python-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=2.10.0",
    "ollama>=0.6.2",
    "openai==2.44.0",
    "python-dotenv==1.1.0",
]

[tool.pyright]
extraPaths = ["calculator"]

